// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo Default formatting 1`] = `
<div>
  <h1>
    The above specific data-attrubutes are removed by default.
  </h1>
  <div>
    <span class="active" data-qa="span" data-cy="span">
      These data-v ID's are removed too by default.
    </span>
    <!---->
    <!-- There's an option you can turn on to remove all HTML comments too -->
    <!-- It's turned off by default, since they usually represent a v-if="false" -->
    <!-- and maybe you want to know about that. If not, set removeComments: true -->
  </div>

  <div :title="function () { return true; }">
    <h3 class="inline-block">Default formatting is improved</h3>
    <span>
      <i class="fa fa-spinner"></i>
      <span class="sr-only">Loading...</span>
    </span>
    <a>
      <button type="button" class="primary">
        <i class="fa fa-plus"></i>
        The formatting here is completely customizable (see API).
      </button>
    </a>
  </div>
</div>
`;

exports[`Demo Inverted settings 1`] = `
<div>
    <h1 data-test="pageTitle" data-test-id="pageTitle" data-testid="pageTitle">
        The above specific data-attrubutes are removed by default.
    </h1>
    <div>
        <span class="active" data-v-b3d95ac7>
            These data-v ID's are removed too by default.
        </span>
    </div>

    <div data-server-rendered="true" :title="[function]">
        <h3 class="inline-block">Default formatting is improved</h3> <span><i class="fa fa-spinner"></i> <span class="sr-only">Loading...</span></span> <a><button type="button" class="primary"><i class="fa fa-plus"></i>
                The formatting here is completely customizable (see API).
            </button></a>
    </div>
</div>
`;

exports[`Demo v2.0.2 settings 1`] = `
<div>
  <h1 data-test="pageTitle" data-test-id="pageTitle" data-testid="pageTitle">
    The above specific data-attrubutes are removed by default.
  </h1>
  <div>
    <span class="active" data-qa="span" data-cy="span" data-v-b3d95ac7>
      These data-v ID's are removed too by default.
    </span>
    <!---->
    <!-- There's an option you can turn on to remove all HTML comments too -->
    <!-- It's turned off by default, since they usually represent a v-if="false" -->
    <!-- and maybe you want to know about that. If not, set removeComments: true -->
  </div>

  <div :title="function () { return true; }">
    <h3 class="inline-block">Default formatting is improved</h3> <span><i class="fa fa-spinner"></i> <span class="sr-only">Loading...</span></span> <a><button type="button" class="primary"><i class="fa fa-plus"></i>
        The formatting here is completely customizable (see API).
      </button></a>
  </div>
</div>
`;
